@@ -1,3 +1,10 @@
+2003-08-23  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* pylibs/Date/Format.py (_DateFormatter.format): stop passing 
+	the mx.DateTime tuple() to time.strftime, as it causes a
+	DeprecationWarning with Python 2.3 (until Lemburg fixes it, at
+	least) and is pointless anyway.
+
 2003-08-22    <smulloni@smullyan.org>
 
 	* configure.in: some cleanup (removed commented out junk), stopped
